Add autofocus for input field

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                 class="search-site-input"
                 placeholder="> enter website key..."
                 type="text"
+                autofocus
               />
               <button type="button" class="btn-search-site">
                 <span class="search-text">go</span>
