fix: info message on site search

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <p>DuckDuckGo search: <span class="example">-query</span></p>
             <p>
               site with search:
-              <span class="example">key'query</span>
+              <span class="example">key:query</span>
             </p>
           </div>
           <button type="button" class="btn-open-modal">add site</button>
