Add navigate to page directly, up key to two chars

--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
               site with search:
               <span class="example">key:query</span>
             </p>
+            <p>
+              navigate to page on site:
+              <span class="example">key/page</span>
+            </p>
           </div>
           <button type="button" class="btn-open-modal">add site</button>
         </div>
